ff-macros/tests/field_list_failures/field_not_reflect.stderr
error[E0277]: `NotReflect` can not be reflected
 --> tests/field_list_failures/field_not_reflect.rs:7:9
  |
7 |     field: NotReflect,
  |            ^^^^^^^^^^ the trait `Reflect` is not implemented for `NotReflect`
  |
  = note: consider annotating `NotReflect` with `#[derive(Reflect)]`
  = help: the following other types implement trait `Reflect`:
            &'static Path
            &'static str
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
          and $N others
  = note: required for the cast from `&NotReflect` to `&(dyn Reflect + 'static)`
